--- a/k8s/sandbox/cluster-01-overlay/.flux.yaml
+++ b/k8s/sandbox/cluster-01-overlay/.flux.yaml
@@ -2,3 +2,18 @@ version: 1
 commandUpdated:
   generators:
     - command: kustomize build --load_restrictor none .
+    - command: kustomize build --load_restrictor none cnp
+  updaters:
+    # use https://github.com/squaremo/kubeyaml on flux-patch.yaml
+    - containerImage:
+        command: >-
+          cat flux-patch.yaml |
+          kubeyaml image --namespace $FLUX_WL_NS --kind $FLUX_WL_KIND --name $FLUX_WL_NAME --container $FLUX_CONTAINER --image "$FLUX_IMG:$FLUX_TAG"
+          > new-flux-patch.yaml &&
+          mv new-flux-patch.yaml $FLUX_WL_NS/flux-patch.yaml
+      policy:
+        command: >-
+          cat flux-patch.yaml |
+          kubeyaml annotate --namespace $FLUX_WL_NS --kind $FLUX_WL_KIND --name $FLUX_WL_NAME "fluxcd.io/$FLUX_POLICY=$FLUX_POLICY_VALUE"
+          > new-flux-patch.yaml &&
+          mv new-flux-patch.yaml $FLUX_WL_NS/flux-patch.yaml
