--- a/k8s/aat/common/cnp/plum-recipe-backend.yaml
+++ b/k8s/aat/common/cnp/plum-recipe-backend.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: plum-recipe-backend
-    version: 0.1.2
+    version: 0.3.0
   values:
     java:
       image: hmctspublic.azurecr.io/plum/recipe-backend:prod-83ccbfb6
@@ -28,6 +28,12 @@ spec:
           - recipe-backend-POSTGRES-HOST
           - recipe-backend-POSTGRES-USER
           - recipe-backend-POSTGRES-PASS
+    smoke-tests:
+      enabled: true
+      backoffLimit: 2
+      image: hmctspublic.azurecr.io/plum/recipe-backend:test-latest 
+      environment:
+        TEST_URL: plum-recipe-backend.service.core-compute-aat.internal
     global:
       environment: aat
       subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
